--- a/index.html
+++ b/index.html
@@ -3,14 +3,47 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test</title>
+    <title>Merry J. Haymond</title>
+    <meta name="description" content="Assignment portal for Merry Haymond 
+        in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/base.css">
 </head>
 
 <body>
-    <h1>Testing</h1>
-    <footer>Hello World!</footer>
+    <header>
+        <picture>
+            <img src="images/merryheadshot2.jpg" alt="Profile picture of Merry">
+        </picture>
+        <h1>Merry J. Haymond</h1>
+    </header>
+    <main>
+        <h2>WDD 230: Assignment Portal</h2>
+        <ul>
+            <li>Lesson 02: <a href="">Title</a></li>
+            <li>Lesson 03: <a href="">Title</a></li>
+            <li>Lesson 04: <a href="">Title</a></li>
+            <li>Lesson 05: <a href="">Title</a></li>
+            <li>Lesson 06: <a href="">Title</a></li>
+            <li>Lesson 07: <a href="">Title</a></li>
+            <li>Lesson 08: <a href="">Title</a></li>
+            <li>Lesson 09: <a href="">Title</a></li>
+            <li>Lesson 10: <a href="">Title</a></li>
+            <li>Lesson 11: <a href="">Title</a></li>
+        </ul>
+    </main>
+    <footer>
+        <div>
+            &copy;<span id="currentYear"></span> | Merry J. Haymond | Utah |
+            <a href="https://www.byui.edu/online">BYU-Idaho Online</a>
+            <p>Last Updated: <span id="updatedDate"></span></p>
+        </div>
+    </footer>
+    <script src="js/base.js"></script>
+
 </body>
 
 </html>
