--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/base.css">
 </head>
@@ -18,7 +21,7 @@
         <picture>
             <img src="images/merryheadshot2.jpg" alt="Profile picture of Merry">
         </picture>
-        <h1>Merry J. Haymond</h1>
+        <h1>Merry Haymond</h1>
     </header>
     <main>
         <h2>WDD 230: Assignment Portal</h2>
@@ -37,7 +40,7 @@
     </main>
     <footer>
         <div>
-            &copy;<span id="currentYear"></span> | Merry J. Haymond | Utah |
+            &copy;<span id="currentYear"></span> | Merry Haymond | Utah |
             <a href="https://www.byui.edu/online">BYU-Idaho Online</a>
             <p>Last Updated: <span id="updatedDate"></span></p>
         </div>
