--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Merry J. Haymond</title>
     <meta name="description" content="Assignment portal for Merry Haymond 
         in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
