--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,6 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Design Principles Week 2 Assignment">
     <title>Merry Haymond Design Principles Page</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/small.css">
+    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="small.css">
+    <link rel="stylesheet" href="medium.css">
+    <link rel="stylesheet" href="large.css">
+
 </head>
 
 <body>
@@ -16,40 +25,39 @@
     </header>
     <main>
         <div>
-            <h2>Visual Hierarchy</h2>
+            <h2>Repetition</h2>
             <a href="https://www.trekbikes.com/us/en_US/bikes/mountain-bikes/c/B300/?gclid=Cj0KCQjw06OTBhC
-        _ARIsAAU1yOW2k9xRhCFhBxfZ6ZVwfLTjQu37XkLOt9fWu1bfIKaFSY6DkGYHEP8aAsRWEALw_wcB"></a>
+        _ARIsAAU1yOW2k9xRhCFhBxfZ6ZVwfLTjQu37XkLOt9fWu1bfIKaFSY6DkGYHEP8aAsRWEALw_wcB">trekbikes.com</a>
             <h3>Trek Mountain Bikes</h3>
-            <img src="images/trekMountainBikes.jpg" alt="Screenshot of Trek Mountain Bikes Website">
-            <p>This Trek Mountain Bike website is a great example of Visual Hierarchy because the first
-                thing you see is a large and majestic picture of the people having fun riding their bikes
-                in the mountains. On top of the picture are two boxes, one white and one black. The white box catches
-                your attention first and direct you to "Look at Bikes". The black box draws your attention
-                next as it asks you if you want to "Learn More".
+            <img src="images/trekbikes3.jpg" alt="Screenshot of Trek Mountain Bikes Website">
+            <p>This Trek Mountain Bike website is a great example of Repetition. Each photo is organized the
+                same way, with a title and one or more boxes that link to "Learn More" or "Shop".
             </p>
         </div>
         <div>
             <h2>Contrast</h2>
-            <a href="https://dcwonderwomanrun.com/"></a>
+            <a href="https://dcwonderwomanrun.com/">dcwonderwomanrun.com</a>
             <h3>DC Wonder Woman Run</h3>
-            <img src="images/dcWonderWomanRun.jpg" alt="Screenshot of the DC Wonder Woman Website">
-            <p>The DC Wonder Woman Website is a great example of Contrast because of its use of contrasting colors
-                like Red, White, and Blue. The bright red, dark blue, and bright white have the ability to draw
-                attention to different areas of the website because of their contrast. One example is the red "Register
-                Now" button that is sitting on the blue background. It calls your attention because of the contrast
-                between the two colors.
+            <img src="images/dcwonderwomanrun3.jpg" alt="Screenshot of the DC Wonder Woman Website">
+            <p>The DC Wonder Woman Website is a great example of Color Contrast. The red, white, and blue help
+                call attention to different areas of the page.
             </p>
         </div>
         <div>
-            <h2>Repetition</h2>
-            <a href="https://www.saratogaspringscity.com/"></a>
+            <h2>Proximity</h2>
+            <a href="https://www.saratogaspringscity.com/">saratogaspringscity.com</a>
             <h3>Saratoga Springs City</h3>
-            <img src="images/saratogaSpringsCity.jpg" alt="Screenshot of the Saratoga Springs City Website">
-            <p>The Saratoga Springs City Website is a great example of repetition with its repeated use of the blue and
-                gold color scheme and the small icons and lines that go down the page. Repetition helps create
-                uniformity and gives the user an idea of what to expect.</p>
+            <img src="images/saratogaspringscity3.jpg" alt="Screenshot of the Saratoga Springs City Website">
+            <p>The Saratoga Springs City Website is a great example of Proximity. Each section of the page is
+                grouped together in such a way that you understand that they belong in the same section.
+            </p>
         </div>
     </main>
-</body>
+    <footer>
+        &copy;<span id="currentYear"></span> | Merry Haymond | Utah |
+        <a href="https://www.byui.edu/online">BYU-Idaho Online</a>
+        <p>Last Updated: <span id="updatedDate"></span></p>
+    </footer>
+    <script src="js/base.js"></script>
 
 </html>
