--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -10,11 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lobster+Two&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/small.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="small.css">
-    <link rel="stylesheet" href="medium.css">
-    <link rel="stylesheet" href="large.css">
+    <link rel="stylesheet" href="css/medium.css">
+    <link rel="stylesheet" href="css/large.css">
 
 </head>
 
@@ -24,34 +24,33 @@
         <h2>Merry Haymond</h2>
     </header>
     <main>
-        <div>
+        <section>
             <h2>Repetition</h2>
-            <a href="https://www.trekbikes.com/us/en_US/bikes/mountain-bikes/c/B300/?gclid=Cj0KCQjw06OTBhC
-        _ARIsAAU1yOW2k9xRhCFhBxfZ6ZVwfLTjQu37XkLOt9fWu1bfIKaFSY6DkGYHEP8aAsRWEALw_wcB">trekbikes.com</a>
+            <a href="https://www.trekbikes.com">trekbikes.com</a>
             <h3>Trek Mountain Bikes</h3>
             <img src="images/trekbikes3.jpg" alt="Screenshot of Trek Mountain Bikes Website">
             <p>This Trek Mountain Bike website is a great example of Repetition. Each photo is organized the
                 same way, with a title and one or more boxes that link to "Learn More" or "Shop".
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Contrast</h2>
             <a href="https://dcwonderwomanrun.com/">dcwonderwomanrun.com</a>
             <h3>DC Wonder Woman Run</h3>
             <img src="images/dcwonderwomanrun3.jpg" alt="Screenshot of the DC Wonder Woman Website">
             <p>The DC Wonder Woman Website is a great example of Color Contrast. The red, white, and blue help
-                call attention to different areas of the page.
+                call attention to different areas of the page, such as the "Register Now" button.
             </p>
-        </div>
-        <div>
+        </section>
+        <section>
             <h2>Proximity</h2>
             <a href="https://www.saratogaspringscity.com/">saratogaspringscity.com</a>
             <h3>Saratoga Springs City</h3>
             <img src="images/saratogaspringscity3.jpg" alt="Screenshot of the Saratoga Springs City Website">
             <p>The Saratoga Springs City Website is a great example of Proximity. Each section of the page is
-                grouped together in such a way that you understand that they belong in the same section.
+                grouped together so you understand that they belong in the same section.
             </p>
-        </div>
+        </section>
     </main>
     <footer>
         &copy;<span id="currentYear"></span> | Merry Haymond | Utah |
