--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
     </main>
     <footer>
         <div>
-            &copy;<span id="currentYear"></span> | Merry Haymond | Utah |
-            <a href="https://www.byui.edu/online">BYU-Idaho Online</a>
+            &copy;<span id="currentYear"></span> | Merry Haymond | Utah
             <p>Last Updated: <span id="updatedDate"></span></p>
         </div>
     </footer>
