--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -28,7 +28,7 @@
             <h2>Repetition</h2>
             <h3>Trek Mountain Bikes</h3>
             <a href="https://www.trekbikes.com">trekbikes.com</a>
-            <img src="images/trekbikes5.jpg" alt="Screenshot of Trek Mountain Bikes Website">
+            <img src="images/trekbikes6.jpg" alt="Screenshot of Trek Mountain Bikes Website">
             <p>This Trek Mountain Bike website is a great example of Repetition. Each photo is organized the
                 same way, with a title and one or more boxes that link to "Learn More" or "Shop".
             </p>
@@ -37,7 +37,7 @@
             <h2>Contrast</h2>
             <h3>DC Wonder Woman Run</h3>
             <a href="https://dcwonderwomanrun.com/">dcwonderwomanrun.com</a>
-            <img src="images/dcwonderwomanrun5.jpg" alt="Screenshot of the DC Wonder Woman Website">
+            <img src="images/dcwonderwomanrun6.jpg" alt="Screenshot of the DC Wonder Woman Website">
             <p>The DC Wonder Woman Website is a great example of Color Contrast. The red, white, and blue help
                 call attention to different areas of the page, such as the "Register Now" button.
             </p>
@@ -46,15 +46,14 @@
             <h2>Proximity</h2>
             <h3>Saratoga Springs City</h3>
             <a href="https://www.saratogaspringscity.com/">saratogaspringscity.com</a>
-            <img src="images/saratogaspringscity5.jpg" alt="Screenshot of the Saratoga Springs City Website">
+            <img src="images/saratogaspringscity6.jpg" alt="Screenshot of the Saratoga Springs City Website">
             <p>The Saratoga Springs City Website is a great example of Proximity. Each section of the page is
                 grouped together so you understand that they belong in the same section.
             </p>
         </section>
     </main>
     <footer>
-        &copy;<span id="currentYear"></span> | Merry Haymond | Utah |
-        <a href="https://www.byui.edu/online">BYU-Idaho Online</a>
+        &copy;<span id="currentYear"></span> | Merry Haymond | Utah
         <p>Last Updated: <span id="updatedDate"></span></p>
     </footer>
     <script src="js/base.js"></script>
