--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Merry J. Haymond</title>
+    <title>Merry J. Haymond Assignment Portal</title>
     <meta name="description" content="Assignment portal for Merry Haymond 
         in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
     <link rel="stylesheet" href="css/normalize.css">
