--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -16,12 +16,54 @@
     <link rel="stylesheet" href="css/base.css">
 
 </head>
-<header>
-
-</header>
 
 <body>
+    <header>
+        <h1>Chamber of Commerce Site Plan</h1>
+    </header>
+    <nav>
+        <ul>
+            <li>
+                <a href="lesson3/index.html">Home</a>
+            </li>
+            <li>
+                <a href="lesson3/color-scheme.html">Color Scheme</a>
+            </li>
+            <li>
+                <a href="lesson3/target-audience.html">Target Audience</a>
+            </li>
+            <li>
+                <a href="lesson3/typography.html">typography</a>
+            </li>
+        </ul>
+    </nav>
+    <div>
+        <h2>Chamber of Commerce Site Domain Name</h2>
+        <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
+            "www.mountsaratogachamberofcommerce.com".
+            This domain name is currently avaliable from <a href="https://domains.google">Google Domains</a> for $12.99
+            per year.</p>
 
+        <h2>The Mount Saratoga Chamber of Commerce Purpose</h2>
+        <p>The Mount Saratoga Chamber of Commerce is a voluntary partnership of businesses and professionals
+            working together to build a strong economy and and community while improveing the quality of life for all
+            its citizens. Our objective is to help businesses prosper and grow, increase job opportunities, encourage
+            healthy growth and development, encourage travel and tourism to our business, and contribute to
+            economic stability within the community.</p>
+
+        <h2>Proposed Logo</h2>
+        <picture> <img src="images/Mount Saratoga Logo Brown.png" alt=""></picture>
+    </div>
+
+    <footer>
+        <footer>
+            <div>
+                &copy;<span id="currentYear"></span> | Merry Haymond | Utah
+                <p>Last Updated: <span id="updatedDate"></span></p>
+            </div>
+        </footer>
+        <script src="js/base.js"></script>
+    </footer>
 </body>
 
 </html>
