--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -3,10 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chamber of Commerce Website Planning Document Week 3 Assignment">
-    <title>Merry Haymond - Chamber of Commerce Website Planning Document</title>
+    <meta name="description" content="Home Page, Chamber of Commerce Website Planning Document, Week 3 Assignment">
+    <title>Merry Haymond - Home Page - Chamber of Commerce Website Planning Document</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,18 +51,15 @@
             economic stability within the community.</p>
 
         <h2>Proposed Logo</h2>
-        <picture> <img src="images/Mount Saratoga Logo Brown.png" alt=""></picture>
+        <picture> <img src="images/Mount Saratoga Logo Brown.png" alt="Logo Graphic of Mount Saratoga"></picture>
     </div>
-
     <footer>
-        <footer>
-            <div>
-                &copy;<span id="currentYear"></span> | Merry Haymond | Utah
-                <p>Last Updated: <span id="updatedDate"></span></p>
-            </div>
-        </footer>
-        <script src="js/base.js"></script>
+        <div>
+            &copy;<span id="currentYear"></span> | Merry Haymond | Utah
+            <p>Last Updated: <span id="updatedDate"></span></p>
+        </div>
     </footer>
+    <script src="js/base.js"></script>
 </body>
 
 </html>
