--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <main>
         <h2>WDD 230: Assignment Portal</h2>
         <ul>
-            <li>Lesson 02: <a href="https://mjhaymond.github.io/wdd230/lesson2/design-principles.html">Design
-                    Principles</a></li>
-            <li>Lesson 03: <a href="">Title</a></li>
+            <li>Lesson 02: <a href="https://mjhaymond.github.io/wdd230/lesson2/design-principles.html">
+                    Design Principles</a></li>
+            <li>Lesson 03: <a href="https://mjhaymond.github.io/wdd230/lesson3/index.html">
+                    Website Planning Document</a></li>
             <li>Lesson 04: <a href="">Title</a></li>
             <li>Lesson 05: <a href="">Title</a></li>
             <li>Lesson 06: <a href="">Title</a></li>
