--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -18,21 +18,21 @@
 
 <body>
     <header>
-        <h1>Chamber of Commerce Site Plan</h1>
+        <h1>Mount Saratoga Chamber of Commerce Site Plan</h1>
     </header>
     <nav>
         <ul>
             <li>
-                <a href="lesson3/index.html">Home</a>
+                <a href="/lesson3/index.html">Home</a>
             </li>
             <li>
-                <a href="lesson3/color-scheme.html">Color Scheme</a>
+                <a href="/lesson3/color-scheme.html">Color Scheme</a>
             </li>
             <li>
-                <a href="lesson3/target-audience.html">Target Audience</a>
+                <a href="/lesson3/target-audience.html">Target Audience</a>
             </li>
             <li>
-                <a href="lesson3/typography.html">typography</a>
+                <a href="/lesson3/typography.html">Typography</a>
             </li>
         </ul>
     </nav>
