--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -39,8 +39,8 @@
     </nav>
     <div>
         <h2>Target Audience</h2>
-        <p>Our targe audience for the Chamber of Commers is single or married adult men and
-            women between the ages 22-65. This age group is the working class with careers or
+        <p>The target audience for the Chamber of Commerce is single or married adult men and
+            women, of all incomes, between the ages 22-65. This age group is the working class with careers or
             the desire to create their own business. This is also the age group that has the
             income to travel and spend money at a variety of business.</p>
 
@@ -50,33 +50,50 @@
         <picture><img src="images/Loni Allen.jpg" alt="Women personal trainer working out."></picture>
         <p>Loni is 25 years old and is a personal trainer at a local gym. The gym is very
             crowded and doesn't have enough equipment to go around. Loni is thinking about
-            opening up her own gym where so her clients can have better acess to the equipment
-            they need to meet their excersice needs.</p>
+            opening up her own gym where so her clients can have better access to the equipment
+            they need to meet their exercise needs.</p>
 
         <h3>Persona #2 - Jack Cartwright</h3>
         <picture> <img src="images/JackCartwright.jpg" alt="Man newly engaged giving his fiance a piggy back ride.">
         </picture>
-        <p>Jack is 28 years old and recetnly got engaged. He is excited to plan a dream honeymoon
+        <p>Jack is 28 years old and recently got engaged. He is excited to plan a dream honeymoon
             for his new fiance. He has some ideas of where to go, but he wants to make sure that
-            he books the best and most reliable hotels, resturants, and excursions for the trip.
+            he books the best and most reliable hotels, restaurants, and excursions for the trip.
         </p>
 
         <h2>Scenarios</h2>
 
         <h3>Scenario #1 </h3>
-        <p></p>
+        <p>Kevin is looking to buy a mountain bike. He is new to biking and is looking for a bike shop
+            with a good reputation, that provides quality merchandise and knowledgeable service. There are
+            several shops in the community, but he is not sure which shop to go to.
+        </p>
 
         <h3>Scenario #2</h3>
-        <p></p>
+        <p>Patty owns a small deli style cafe in town and was asked if she could cater a large charity dinner.
+            She has been asked to serve several kinds of desserts, but they are not her specialty. She needs to
+            another business that specialize in desserts to cover that portion of her clients catering request.
+        </p>
 
         <h3>Scenario #3</h3>
-        <p></p>
+        <p>Linda has recently inherited a old house from her Aunt who passed away. The house is located in a
+            small town, and she is thinking of turning it into a bed and breakfast. She needs to find out what
+            other business are in the area that she could call upon to meet her own businesses needs.
+        </p>
 
         <h3>Scenario #4</h3>
-        <p></p>
+        <p>Luke would like to open a his own Ninja Warrior Gym, but he's not sure where. He has looked at
+            several locations in the surrounding cities, but he needs help understanding the needs of the
+            different communities before he picks a location.</thead>
+        </p>
 
         <h3>Scenario #5</h3>
-        <p></p>
+        <p>Kevin has a thriving chiropractic office in his community. Over the last several months he
+            has had to turn new customers away because he doesn't have enough time to see everyone. He is
+            thinking of expanding his office, but he needs to find a way to reach out to other chiropractors
+            and see who might be interested in joining his team.
+            </head>
+        </p>
 
     </div>
     <footer>
