--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -23,16 +23,16 @@
     <nav>
         <ul>
             <li>
-                <a href="lesson3/index.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="lesson3/color-scheme.html">Color Scheme</a>
+                <a href="color-scheme.html">Color Scheme</a>
             </li>
             <li>
-                <a href="lesson3/target-audience.html">Target Audience</a>
+                <a href="target-audience.html">Target Audience</a>
             </li>
             <li>
-                <a href="lesson3/typography.html">typography</a>
+                <a href="typography.html">typography</a>
             </li>
         </ul>
     </nav>
@@ -43,9 +43,10 @@
             Webite Background: #F0F7F4 - Mint Cream<br>
             Header/Footer: #70ABAF - Cadet Blue<br>
             Navigation Bar:#99E1D9 - Middle Blue Green<br>
-            Text in Header, Footer, Navigation Bar: #32292F - Black Coffee<br>
+            Text in Navigation Bar: #32292F - Black Coffee<br>
+            Text in Header & Footer: #32292F - Black Coffee
             Text in Body: #705D56 - Umber<br>
-            <img src="images/Website Color Palett.jpg" alt="Color Palett Image">
+            <img src="images/website_color_palett2.jpg" alt="Color Palett Image">
         </p>
     </div>
     <footer>
