--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,16 +24,16 @@
     <nav>
         <ul>
             <li>
-                <a href="lesson3/index.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
-                <a href="lesson3/color-scheme.html">Color Scheme</a>
+                <a href="color-scheme.html">Color Scheme</a>
             </li>
             <li>
-                <a href="lesson3/target-audience.html">Target Audience</a>
+                <a href="target-audience.html">Target Audience</a>
             </li>
             <li>
-                <a href="lesson3/typography.html">typography</a>
+                <a href="typography.html">typography</a>
             </li>
         </ul>
     </nav>
@@ -47,14 +47,14 @@
         <h2>Personas</h2>
 
         <h3>Persona #1 - Loni Allen</h3>
-        <picture><img src="images/Loni Allen.jpg" alt="Women personal trainer working out."></picture>
+        <picture><img src="images/Loni Allen2.jpg" alt="Women personal trainer working out."></picture>
         <p>Loni is 25 years old and is a personal trainer at a local gym. The gym is very
             crowded and doesn't have enough equipment to go around. Loni is thinking about
             opening up her own gym where so her clients can have better access to the equipment
             they need to meet their exercise needs.</p>
 
         <h3>Persona #2 - Jack Cartwright</h3>
-        <picture> <img src="images/JackCartwright.jpg" alt="Man newly engaged giving his fiance a piggy back ride.">
+        <picture> <img src="images/JackCartwright2.jpg" alt="Man newly engaged giving his fiance a piggy back ride.">
         </picture>
         <p>Jack is 28 years old and recently got engaged. He is excited to plan a dream honeymoon
             for his new fiance. He has some ideas of where to go, but he wants to make sure that
