--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -51,8 +51,8 @@
     </div>
     <footer>
         <div>
-            &copy;<span id="currentYear"></span> | Merry Haymond | Utah
-            <p>Last Updated: <span id="updatedDate"></span></p>
+            <p>&copy;<span id="currentYear"></span> | Merry Haymond | Utah |
+                Last Updated: <span id="updatedDate"></span></p>
         </div>
     </footer>
     <script src="js/base.js"></script>
