--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -44,7 +44,7 @@
             Header/Footer: #70ABAF - Cadet Blue<br>
             Navigation Bar:#99E1D9 - Middle Blue Green<br>
             Text in Navigation Bar: #32292F - Black Coffee<br>
-            Text in Header & Footer: #32292F - Black Coffee
+            Text in Header & Footer: White <br>
             Text in Body: #705D56 - Umber<br>
             <img src="images/website_color_palett2.jpg" alt="Color Palett Image">
         </p>
