--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -32,23 +32,29 @@
                 <a href="target-audience.html">Target Audience</a>
             </li>
             <li>
-                <a href="typography.html">typography</a>
+                <a href="typography.html">Typography</a>
             </li>
         </ul>
     </nav>
-    <div>
-        <h2>Color-Scheme for Chamber of Commerce Website</h2>
-        <p>The proposed color-scheme for the different elements on this website is a cool color palette with
-            dark grounding neutrals. These colors have a classic feeling while still maintaing a modern vibe. <br>
-            Webite Background: #F0F7F4 - Mint Cream<br>
-            Header/Footer: #70ABAF - Cadet Blue<br>
-            Navigation Bar:#99E1D9 - Middle Blue Green<br>
-            Text in Navigation Bar: #32292F - Black Coffee<br>
-            Text in Header & Footer: White <br>
-            Text in Body: #705D56 - Umber<br>
-            <img src="images/website_color_palett2.jpg" alt="Color Palett Image">
-        </p>
-    </div>
+    <main>
+        <section>
+            <h2>Color-Scheme for Chamber of Commerce Website</h2>
+            <p>The proposed color-scheme for the different elements on this website is a cool color palette with
+                dark grounding neutrals. These colors have a classic feeling while still maintaing a modern vibe. <br>
+                Webite Background: White<br>
+                Body Background: #F0F7F4 - Mint Cream<br>
+                Header/Footer Background: #477f83 - Ming<br>
+                Navigation Bar:#99E1D9 - Middle Blue Green<br>
+                Text in Navigation Bar: #32292F - Black Coffee<br>
+                H2 Titles: #477f83 - Ming<br>
+                Text in Header & Footer: White <br>
+                Text in Body: #705D56 - Umber<br>
+            </p>
+            <picture>
+                <img src="images/website_color_palette1-2.jpg" alt="Color Palett Image">
+            </picture>
+        </section>
+    </main>
     <footer>
         <div>
             <p>&copy;<span id="currentYear"></span> | Merry Haymond | Utah |
