--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,12 +13,13 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/query.css">
 
 </head>
 
 <body>
     <header>
-        <h1>Mount Saratoga Chamber of Commerce Site Plan</h1>
+        <h1>Chamber of Commerce Site Plan</h1>
     </header>
     <nav>
         <ul>
@@ -36,23 +37,29 @@
             </li>
         </ul>
     </nav>
-    <div>
-        <h2>Chamber of Commerce Site Domain Name</h2>
-        <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
-            "www.mountsaratogachamberofcommerce.com".
-            This domain name is currently avaliable from <a href="https://domains.google">Google Domains</a> for $12.99
-            per year.</p>
+    <main>
+        <section>
+            <h2>Mount Saratoga Chamber of Commerce Purpose</h2>
+            <p>The Mount Saratoga Chamber of Commerce is a voluntary partnership of businesses and professionals
+                working together to build a strong economy and and community while improveing the quality of life for
+                all
+                its citizens. Our objective is to help businesses prosper and grow, increase job opportunities,
+                encourage
+                healthy growth and development, encourage travel and tourism to our business, and contribute to
+                economic stability within the community.</p>
 
-        <h2>The Mount Saratoga Chamber of Commerce Purpose</h2>
-        <p>The Mount Saratoga Chamber of Commerce is a voluntary partnership of businesses and professionals
-            working together to build a strong economy and and community while improveing the quality of life for all
-            its citizens. Our objective is to help businesses prosper and grow, increase job opportunities, encourage
-            healthy growth and development, encourage travel and tourism to our business, and contribute to
-            economic stability within the community.</p>
-
-        <h2>Proposed Logo</h2>
-        <picture> <img src="images/Mount Saratoga Logo Brown.png" alt="Logo Graphic of Mount Saratoga"></picture>
-    </div>
+            <h2>Chamber of Commerce Site Domain Name</h2>
+            <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
+                "www.mountsaratogachamberofcommerce.com".
+                This domain name is currently avaliable from <a href="https://domains.google">Google Domains</a> for
+                $12.99
+                per year.</p>
+        </section>
+        <section>
+            <h2>Proposed Logo</h2>
+            <picture> <img src="images/mount_saratoga_logo_brown2.png" alt="Logo Graphic of Mount Saratoga"></picture>
+        </section>
+    </main>
     <footer>
         <div>
             <p>&copy;<span id="currentYear"></span> | Merry Haymond | Utah |
