--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -37,11 +37,13 @@
             </li>
         </ul>
     </nav>
-    <div>
-        <h2>Typography Choice for Chamber of Commerce Website</h2>
-        <p>Below is a list of the fonts and sizes that will be used in different areas of the website.</p>
-        <picture> <img src="images/TypographyChart.png" alt=""></picture>
-    </div>
+    <main>
+        <section>
+            <h2>Typography Choice for Chamber of Commerce Website</h2>
+            <p>Below is a list of the fonts and sizes that will be used in different areas of the website.</p>
+            <picture> <img src="images/TypographyChart.png" alt=""></picture>
+        </section>
+    </main>
     <footer>
         <div>
             <p>&copy;<span id="currentYear"></span> | Merry Haymond | Utah |
