--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -48,7 +48,7 @@
                 healthy growth and development, encourage travel and tourism to our business, and contribute to
                 economic stability within the community.</p>
 
-            <h2>Chamber of Commerce Site Domain Name</h2>
+            <h2>Domain Name</h2>
             <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
                 "www.mountsaratogachamberofcommerce.com".
                 This domain name is currently avaliable from <a href="https://domains.google">Google Domains</a> for
