--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
-
+    <link rel="stylesheet" href="css/query.css">
 </head>
 
 <body>
@@ -51,8 +51,7 @@
             <picture><img src="images/LoniAllen2.jpg" alt="Women personal trainer working out."></picture>
             <p>Loni is 25 years old and is a personal trainer at a local gym. The gym is very
                 crowded and doesn't have enough equipment to go around. Loni is thinking about
-                opening up her own gym where so her clients can have better access to the equipment
-                they need to meet their exercise needs.</p>
+                opening up her own gym where she can better meet the need of her clients.</p>
 
             <h3>Persona #2 - Jack Cartwright</h3>
             <picture> <img src="images/JackCartwright2.jpg"
@@ -79,8 +78,9 @@
             </p>
 
             <h3>Scenario #3</h3>
-            <p>Linda has recently inherited a old house from her Aunt who passed away. The house is located in a
-                small town, and she is thinking of turning it into a bed and breakfast. She needs to find out what
+            <p>Linda has recently inherited a old house from her Aunt who passed away. The house is located in the
+                near the heart of town, and she is thinking of turning it into a bed and breakfast. She needs to find
+                out what
                 other business are in the area that she could call upon to meet her own businesses needs.
             </p>
 
@@ -95,7 +95,6 @@
                 has had to turn new customers away because he doesn't have enough time to see everyone. He is
                 thinking of expanding his office, but he needs to find a way to reach out to other chiropractors
                 and see who might be interested in joining his team.
-                </head>
             </p>
         </section>
     </main>
