--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/query.css">
 </head>
 
 <body>
