--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Lobster+Two&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/normalize.css">
+    <!--<link rel="stylesheet" href="css/normalize.css">-->
     <link rel="stylesheet" href="css/base.css">
-
+    <link rel="stylesheet" href="css/query.css">
 </head>
 
 <body>
