--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -42,18 +42,23 @@
             <h2>Color-Scheme for Chamber of Commerce Website</h2>
             <p>The proposed color-scheme for the different elements on this website is a cool color palette with
                 dark grounding neutrals. These colors have a classic feeling while still maintaing a modern vibe. <br>
-                Webite Background: White<br>
-                Body Background: #F0F7F4 - Mint Cream<br>
-                Header/Footer Background: #477f83 - Ming<br>
-                Navigation Bar:#99E1D9 - Middle Blue Green<br>
-                Text in Navigation Bar: #32292F - Black Coffee<br>
-                H2 Titles: #477f83 - Ming<br>
-                Text in Header & Footer: White <br>
-                Text in Body: #705D56 - Umber<br>
+                <li>Webite Background: White</li>
+                <li>Body Background: #F0F7F4 - Mint Cream</li>
+                <li>Header/Footer Background: #477f83 - Ming</li>
+                <li>Navigation Bar:#99E1D9 - Middle Blue Green</li>
+                <li>Text in Navigation Bar: #32292F - Black Coffee</li>
+                <li>H2 Titles: #477f83 - Ming</li>
+                <li>Text in Header & Footer: White</li>
+                <li>Text in Body: #705D56 - Umber</li>
             </p>
+        </section>
+        <section>
+            <h2>Color palette</h2>
             <picture>
                 <img src="images/website_color_palette1-2.jpg" alt="Color Palett Image">
             </picture>
+            <h2>Color Names</h2>
+            <p>Ming, Middle Blue Green, Mint Cream, Umber, Black Coffee.</p>
         </section>
     </main>
     <footer>
