--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -40,7 +40,12 @@
     <main>
         <section>
             <h2>Typography Choice for Chamber of Commerce Website</h2>
-            <p>Below is a list of the fonts and sizes that will be used in different areas of the website.</p>
+            <p> Two different fonts were chosen for this website. Lobster Two is a cursive font that brings
+                a touch of sophistication to the website, and Lato which is a sans serif font that is easy to
+                the body of information.
+            </p>
+        </section>
+        <section>
             <picture> <img src="images/TypographyChart.png" alt=""></picture>
         </section>
     </main>
