--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -37,27 +37,25 @@
             </li>
         </ul>
     </nav>
+
     <main>
         <section>
             <h2>Mount Saratoga Chamber of Commerce Purpose</h2>
-            <p>The Mount Saratoga Chamber of Commerce is a voluntary partnership of businesses and professionals
-                working together to build a strong economy and and community while improveing the quality of life for
-                all
-                its citizens. Our objective is to help businesses prosper and grow, increase job opportunities,
-                encourage
-                healthy growth and development, encourage travel and tourism to our business, and contribute to
-                economic stability within the community.</p>
+            <p>The Mount Saratoga Chamber of Commerce is a voluntary partnership of businesses and
+                professionals working together to build a strong economy and and community while
+                improving the quality of life for all its citizens. Our objective is to help businesses
+                prosper and grow, increase job opportunities, encourage healthy growth and development,
+                encourage travel and tourism to our business, and contribute to economic stability
+                within the community.</p>
 
             <h2>Domain Name</h2>
             <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
-                "www.mountsaratogachamberofcommerce.com".
-                This domain name is currently avaliable from <a href="https://domains.google">Google Domains</a> for
-                $12.99
-                per year.</p>
+                "www.mountsaratogachamberofcommerce.com". This domain name is currently available from
+                Google Domains for $12.99 per year.</p>
         </section>
         <section>
             <h2>Proposed Logo</h2>
-            <picture> <img src="images/mount_saratoga_logo_brown2.png" alt="Logo Graphic of Mount Saratoga"></picture>
+            <picture><img src="images/mount_saratoga_logo_3.jpg" alt="Logo Graphic of Mount Saratoga"></picture>
         </section>
     </main>
     <footer>
