--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -55,8 +55,7 @@
 
             <h3>Persona #2 - Jack Cartwright</h3>
             <picture> <img src="images/JackCartwright2.jpg"
-                    alt="Man newly engaged giving his fiance a piggy back ride.">
-            </picture>
+                    alt="Man newly engaged giving his fiance a piggy back ride."></picture>
             <p>Jack is 28 years old and recently got engaged. He is excited to plan a dream honeymoon
                 for his new fiance. He has some ideas of where to go, but he wants to make sure that
                 he books the best and most reliable hotels, restaurants, and excursions for the trip.
