--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -50,7 +50,7 @@
 
             <h2>Domain Name</h2>
             <p>The name for my Chamber of Commerce is Mount Saratoga. The website domain name will be
-                "www.mountsaratogachamberofcommerce.com". This domain name is currently available from
+                "www.mountsaratoga chamberofcommerce.com". This domain name is currently available from
                 Google Domains for $12.99 per year.</p>
         </section>
         <section>
