--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -42,7 +42,7 @@
             <h2>Typography Choice for Chamber of Commerce Website</h2>
             <p> Two different fonts were chosen for this website. Lobster Two is a cursive font that brings
                 a touch of sophistication to the website, and Lato which is a sans serif font that is easy to
-                the body of information.
+                read for body of information.
             </p>
         </section>
         <section>
