push portal link

--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -72,10 +72,10 @@
 
     <!-- FOOTER HERE -->
     <footer>
-        <div>
-            &copy;<span id="currentYear"></span> Mount Saratoga Chamber || Merry Haymond | WDD 230 Project
-            <p>Last Updated: <span id="updatedDate"></span></p>
-        </div>
+        <p>
+            &copy;<span id="currentYear"></span> Mount Saratoga Chamber ||
+            Merry Haymond | WDD 230 Project || Last Updated: <span id="updatedDate"></span>
+        </p>
     </footer>
     <script src="js/scripts.js"></script>
 </body>
