--- a/lesson4/chamber/index.html
+++ b/lesson4/chamber/index.html
@@ -22,11 +22,21 @@
 
 <body>
     <header>
-        <picture>
-            <img src="" alt="">
-        </picture>
-        <h1>Mount Saratoga Chamber of Commerce</h1>
-        <h2>Possible Slogan or Tagline</h2>
+        <div id="logo">
+            <picture>
+                <img src="images/mount_saratoga_logo_brown2.png" alt="Mount Saratoga Logo">
+            </picture>
+            <section class="headings">
+                <h1>Mount Saratoga Chamber of Commerce</h1>
+                <h2 class="tagLine">"Building a strong community together!"</h2>
+            </section>
+        </div>
+        <div class="social">
+            <picture>
+                <img src="images/Facebook_Logo_(2019).png" alt="Facebook Logo" width="32px">
+                <img src="images/rsz_pngwingcom.png" alt="Linkedin Logo" width="32px">
+            </picture>
+        </div>
     </header>
 
     <!-- NAVIGATION HERE -->
@@ -63,8 +73,8 @@
                 <h2 id="spot2">Spotlight 2</h2>
                 <h2 id="spot3">Spotlight 3</h2>
             </div>
-            <div>
-                <h2 class="box6">Join</h2>
+            <div class="box6">
+                <h2>Join</h2>
             </div>
 
         </section>
@@ -72,9 +82,12 @@
 
     <!-- FOOTER HERE -->
     <footer>
+        <picture>
+            <img src="images/mount_saratoga_logo_brown2.png" alt="Mount Saratoga Logo">
+        </picture>
         <p>
-            &copy;<span id="currentYear"></span> Mount Saratoga Chamber ||
-            Merry Haymond | WDD 230 Project || Last Updated: <span id="updatedDate"></span>
+            &copy;<span id="currentYear"></span> Mount Saratoga Chamber |
+            Merry Haymond | WDD 230 Project | Last Updated: <span id="updatedDate"></span>
         </p>
     </footer>
     <script src="js/scripts.js"></script>
